--- a/Rock_Papper_Scissors/style.css
+++ b/Rock_Papper_Scissors/style.css
@@ -26,11 +26,10 @@ body{
 }
 .comp img{
     position: absolute;
-    height: 190px;
-    width: 190px;
-    background-size: contain;
-    background-repeat: no-repeat;
+    height: 200px;
+    width: 230px;
     visibility: hidden;
+    border-radius: 10px;
 }
 .comp{
     position: relative;
@@ -38,7 +37,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 200px;
-    width: 200px;
+    width: 230px;
     border: 2px solid orange;
     border-radius: 10px;
 }
